--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ h1{
 
 */
 .color-container{
+
     background-color: orange;
     width: 300px;
     height: 150px;
@@ -33,4 +34,9 @@ h1{
     display: flex;
     justify-content: center;
     align-content: center;
+    font-size: 25px;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+    border: solid black 2px;
+    border-radius: 10px;
+    
 }
